--- a/src/styles.css
+++ b/src/styles.css
@@ -21,8 +21,16 @@ body {
   display: flex;
 }
 
+.svg-container {
+  overflow: auto;
+}
+
 .demo-container {
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+.svg {
+  background: #f5f5f5;
 }
