--- a/src/styles.css
+++ b/src/styles.css
@@ -74,9 +74,10 @@ body {
 }
 
 .node {
-  fill: #f5f5f5;
-  stroke: #000000;
+  fill: #ffffff;
+  stroke: #d8d8d8;
   stroke-width: 1px;
+  cursor: pointer;
 }
 
 .node:hover {
@@ -89,8 +90,38 @@ body {
   font-size: 14px;
   text-shadow: none;
   fill: #3f3f3f;
+  user-select: none;
 }
 
 .node:hover > .node-text {
   fill: #ffffff;
+}
+
+.button-rect {
+  cursor: pointer;
+  fill: #124191;
+  stroke: none;
+}
+
+.node:hover .button-rect {
+  fill: #ffffff;
+}
+
+.button-rect-hover {
+  fill: rgba(126, 126, 126, 0);
+}
+
+.button-rect-hover:hover {
+  fill: rgba(126, 126, 126, 0.4);
+}
+
+.button-symbol {
+  font-size: 12px;
+  fill: #ffffff;
+  stroke: none;
+  user-select: none;
+}
+
+.node:hover .button-symbol {
+  fill: #124191;
 }
