--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@ body {
 .edit-container {
   display: flex;
   justify-items: stretch;
+  height: 200px;
 }
 
 .edit-container > textarea {
@@ -79,60 +80,3 @@ body {
   background: #f5f5f5;
 }
 
-.node {
-  fill: #ffffff;
-  stroke: #d8d8d8;
-  stroke-width: 1px;
-  cursor: pointer;
-}
-
-.node:hover {
-  fill: #124191;
-}
-
-.node-text {
-  stroke: none;
-  pointer-events: none;
-  font-size: 14px;
-  text-shadow: none;
-  fill: #3f3f3f;
-  user-select: none;
-}
-
-.node:hover > .node-text {
-  fill: #ffffff;
-}
-
-.button-rect {
-  cursor: pointer;
-  fill: #124191;
-  stroke: none;
-}
-
-.node:hover .button-rect {
-  fill: #ffffff;
-}
-
-.button-rect-hover {
-  fill: rgba(126, 126, 126, 0);
-}
-
-.button-rect-hover:hover {
-  fill: rgba(126, 126, 126, 0.4);
-}
-
-.button-symbol {
-  font-size: 20px;
-  fill: #ffffff;
-  stroke: none;
-  user-select: none;
-}
-
-.node:hover .button-symbol {
-  fill: #124191;
-}
-
-.network {
-  stroke: #d8d8d8;
-  stroke-width: 2px;
-}
